[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
wasmtime = "*"
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen/", rev = "273947434f9561c3433fbe7aa1103af7613ac9be" }

